syntax = "proto3";

package link_cut_api;
option go_package = "./;link_cut_api";


// Объявление сервиса для создания коротких ссылок

service LinkCut {
  rpc Create (CreateRequest) returns (CreateReply); // Принимает длинную ссылку возвращает короткую
  rpc Get (GetRequest) returns (GetReply);          // Принимает короткую ссылку возвращает длинную
}

// Входящее сообщение для Create метода

message CreateRequest {
  string url = 1;
}

// Исходящее сообщение для Create метода

message CreateReply {
  string url = 1;
}
// Входящее сообщение для Get метода

message GetRequest {
  string url = 1;
}

// Исходящее сообщение для Get метода

message GetReply {
  string url = 1;
}